force-app/main/default/objects/Holder_Drawings__c/Holder_Drawings__c.object-meta.xml
<CustomObject>
    <label>Holder Drawings</label>
    <nameField>
        <label>Holder Drawings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Drawings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>