force-app/main/default/objects/Holder_Drawings__c/fields/Dim_A__c.field-meta.xml
<CustomField>
    <fullName>Dim_A__c</fullName>
    <label>Dim A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>