force-app/main/default/objects/Holder_Drawings__c/fields/Dim_B__c.field-meta.xml
<CustomField>
    <fullName>Dim_B__c</fullName>
    <label>Dim B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>