force-app/main/default/objects/Holder_Drawings__c/fields/Dim_C_Override__c.field-meta.xml
<CustomField>
    <fullName>Dim_C_Override__c</fullName>
    <label>Dim C Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>