force-app/main/default/objects/Holder_Drawings__c/fields/Dim_D__c.field-meta.xml
<CustomField>
    <fullName>Dim_D__c</fullName>
    <label>Dim D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>