force-app/main/default/objects/Holder_Drawings__c/fields/Dim_E__c.field-meta.xml
<CustomField>
    <fullName>Dim_E__c</fullName>
    <label>Dim E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>