force-app/main/default/objects/Holder_Drawings__c/fields/Dim_F__c.field-meta.xml
<CustomField>
    <fullName>Dim_F__c</fullName>
    <label>Dim F</label>
    <length>255</length>
    <type>Text</type>
</CustomField>