force-app/main/default/objects/Holder_Drawings__c/fields/Drawing_Info_Override__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Info_Override__c</fullName>
    <label>Drawing Info Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>