force-app/main/default/objects/Holder_Drawings__c/fields/Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number__c</fullName>
    <label>Drawing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>