force-app/main/default/objects/Holder_Drawings__c/fields/HOC__c.field-meta.xml
<CustomField>
    <fullName>HOC__c</fullName>
    <label>HOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>