force-app/main/default/objects/Holder_Drawings__c/fields/Holders__c.field-meta.xml
<CustomField>
    <fullName>Holders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holders</label>
    <referenceTo>Holders__c</referenceTo>
    <relationshipLabel>Holder Drawings</relationshipLabel>
    <relationshipName>Holder_Drawings</relationshipName>
    <type>Lookup</type>
</CustomField>