force-app/main/default/objects/Holder_Drawings__c/fields/IINO__c.field-meta.xml
<CustomField>
    <fullName>IINO__c</fullName>
    <label>IINO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>