force-app/main/default/objects/Holder_Drawings__c/fields/IINO_DWGNO__c.field-meta.xml
<CustomField>
    <fullName>IINO_DWGNO__c</fullName>
    <label>IINO DWGNO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>