force-app/main/default/objects/Holder_Drawings__c/fields/J_Hook_IINO__c.field-meta.xml
<CustomField>
    <fullName>J_Hook_IINO__c</fullName>
    <label>J-Hook IINO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>