force-app/main/default/objects/Holder_Drawings__c/fields/JHOOK_IINO_DWGNO__c.field-meta.xml
<CustomField>
    <fullName>JHOOK_IINO_DWGNO__c</fullName>
    <label>JHOOK IINO DWGNO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>