force-app/main/default/objects/Holder_Drawings__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>