force-app/main/default/objects/Holder_Drawings__c/fields/SizeClassDesc__c.field-meta.xml
<CustomField>
    <fullName>SizeClassDesc__c</fullName>
    <label>SizeClassDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>