force-app/main/default/objects/Holder_Drawings__c/fields/Submittal_Drawing_DWGNO__c.field-meta.xml
<CustomField>
    <fullName>Submittal_Drawing_DWGNO__c</fullName>
    <label>Submittal Drawing DWGNO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>