force-app/main/default/objects/Holder_Drawings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Holders__c</columns>
    <columns>Submittal_Drawing_DWGNO__c</columns>
    <columns>Drawing_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>